Learning Spring handling of basic GET and POST requests using service and controller classes in an MVC type model